add refresh token creation to auth controller